--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --form-div-height: 25vh;
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -54,11 +58,56 @@ body {
 }
 
 .content-container {
-    width: 60%;
+    width: 65%;
+    background: #f3f3f3;
 }
+.content-container > div {
+    height: calc(calc(100vh - var(--form-div-height)) / 2);
+    padding-left: 50px;
+}
+.header {
+    padding: 180px 80px
+}
+
+div.form {
+    background: #ffffff;
+    box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.1);
+    height: var(--form-div-height);
+    padding-top: 20px;
+}
+.form p,
+.header p {
+    font-size: 20px;
+    font-weight: 600;
+}
+
 form > div {
     display: flex;
+    padding: 5px 0;
+    gap: 40px;
+}
+form label {
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 500;
 }
 input {
     display: block;
+    height: 1.8rem;
+    width: 13rem;
+    padding-left: 5px;
+    border: 1px solid #d4d4d4;
+    border-radius: 3px;
+}
+
+input:focus {
+    outline: none;
+    border: 1px solid rgb(48, 27, 238);
+    border-radius: 3px;
+    box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);
+}
+
+input:valid {
+    border: 1px solid rgb(12, 162, 94);
+    border-radius: 3px;
 }
